common/applications/omada-controller/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-controller
  annotations:
    external-dns.kubernetes.io/provider: public
    external-dns.kubernetes.io/target: "${PUBLIC_IP}"
spec:
  parentRefs:
    - name: omada-controller-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - omada.network.${LOCAL_PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: omada-controller-web
          port: 80
